# rust-backends

auth/: .env  Cargo.toml
auth/migrations/: 0001_mig.sql
auth/src/: config.rs  errors.rs  main.rs
auth/src/auth/: jwt.rs  mod.rs  password.rs
auth/src/handlers/: control.rs
auth/src/middleware/: middleware.rs
auth/src/models/: user.rs
auth/src/routes/: route.rs
axum/: .env  Cargo.toml
axum/migrations/: 001_test.sql
axum/src/: main.rs
todo/: Cargo.toml
todo/migrations/: 0002_todo.sql
todo/src/: main.rs
todo/src/connect_db/: connect.rs  mod.rs
todo/src/controllers/: control.rs
todo/src/model/: model.rs
todo/src/routes/: route.rs
