[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = {version = "0.5.3"}
axum = { version = "0.8.4", features = ["macros", "http2", "ws"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rand = {version = "0.9.2"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = {version = "0.8.6",features = ["runtime-tokio","postgres","macros","tls-rustls","chrono"]}
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
uuid = "1.18.0"
